# smoframework

./: .gitignore  ARCHITECTURE.md  AUTHORS  CMakeLists.txt  LICENSE  NOTICE  README.md  SPEC.md
RFC/: 0001-contract.md  0002-capability.md  0003-witness.md  0004-trust.md  0005-dag.md  0006-mesh-identity-certificate.md  0007-enrollment-protocol.md  0025-contract-runtime.md  0026-contract-abi.md  0028-contract-runtime.md  0029-policy-engine.md  0030-native-contracts.md  0031-mesh-manager.md  0032-context-cli.md  README.md  (+1 more)
cmd/smo-cli/: CMakeLists.txt  cli_context.cpp  cli_context.hpp  intent_parser.cpp  intent_parser.hpp  main.cpp
compiler/: CMakeLists.txt  README.md  compiler.cpp  compiler.h
compiler/ast/: CMakeLists.txt  ast.cpp  ast.hpp
compiler/graph/: CMakeLists.txt  builder.cpp  builder.hpp  graph.h
compiler/optimizer/: CMakeLists.txt  optimizer.cpp  optimizer.hpp
compiler/parser/: CMakeLists.txt  parser.cpp  parser.hpp
compiler/planner/: CMakeLists.txt  planner.cpp  planner.hpp
compiler/smir/: CMakeLists.txt  smir.cpp  smir.hpp
compiler/validator/: CMakeLists.txt  final.cpp  final.hpp  semantic.cpp  semantic.hpp
core/: CMakeLists.txt  README.md  types.hpp
core/acl/: CMakeLists.txt  policy_engine.cpp  policy_engine.hpp
core/authority/: CMakeLists.txt  authority.cpp  authority.hpp  enroll_server.cpp  enroll_server.hpp  registry.cpp  registry.hpp
core/bootstrap/: bootstrap_protocol.cpp  bootstrap_snapshot.cpp  bootstrap_snapshot.hpp
core/capability/: CMakeLists.txt  capability.h
core/certificate/: certificate.cpp  certificate.hpp
core/contract/: CMakeLists.txt  contract.hpp  contract_abi.cpp  contract_abi.hpp  contract_definition.cpp  contract_definition.hpp  contract_id.cpp  contract_id.hpp  contract_interface.hpp  registry.cpp  registry.hpp
core/contract/native/: fs_contracts.cpp  fs_contracts.hpp  process_contracts.cpp  transfer_contracts.cpp  transfer_contracts.hpp  workflow_contracts.cpp  workflow_contracts.hpp
core/crypto/: hash_provider.cpp
core/discovery/: CMakeLists.txt  discovery.cpp  discovery.hpp  gossip.cpp  gossip.hpp  seed_store.cpp  seed_store.hpp
core/enroll/: CMakeLists.txt  auto_enroll.cpp  auto_enroll.hpp  join_token.cpp  join_token.hpp
core/errors/: CMakeLists.txt  error.hpp  error_codes.md  errors.h
core/fsm/: CMakeLists.txt  node_lifecycle_fsm.cpp  node_lifecycle_fsm.hpp
core/genesis/: genesis.cpp  genesis_manifest.cpp  genesis_manifest.hpp  recovery_package.cpp  recovery_package.hpp
core/governance/: governance.cpp  governance.hpp
core/identity/: identity.cpp  identity.hpp
core/intent/: CMakeLists.txt  intent.h
core/join/: CMakeLists.txt  join_protocol.cpp  join_protocol.hpp
core/mesh/: mesh_manager.cpp  mesh_manager.hpp
core/network/: CMakeLists.txt  packet_dispatcher.cpp  packet_dispatcher.hpp
core/network/bootstrap/: seed_resolver.hpp
core/network/gossip/: gossip_engine.cpp  gossip_engine.hpp
core/network/sync/: membership_sync.cpp  membership_sync.hpp  sync_service.cpp  sync_service.hpp
core/network/transport/: address_resolver.hpp
core/network/udp/: heartbeat.cpp  heartbeat.hpp  heartbeat_service.cpp  heartbeat_service.hpp  udp_transport.cpp  udp_transport.hpp
core/opcode/: CMakeLists.txt  opcode.h  opcode_registry.cpp
core/recovery/: CMakeLists.txt  crl.cpp  crl.hpp  recovery_engine.cpp  recovery_engine.hpp
core/runtime/: CMakeLists.txt  authorization_manager.cpp  authorization_manager.hpp  event_store.cpp  event_store.hpp  execution_engine.cpp  execution_engine.hpp  history.cpp  history.hpp  middleware_pipeline.cpp  middleware_pipeline.hpp  policy_middleware.cpp  policy_middleware.hpp  runtime_bridge.cpp  runtime_bridge.hpp  scheduler.cpp  scheduler.hpp
core/runtime/contracts/: bootstrap_contract.cpp  join_contract.cpp
core/select/: CMakeLists.txt  query_parser.cpp  query_parser.hpp  selector.cpp  selector.hpp
core/session/: CMakeLists.txt  session.cpp  session.h  session.hpp
core/state/: CMakeLists.txt  state.h
core/storage/: audit_store.cpp  audit_store.hpp
reference/OLD_SHELLMAP/: ANALYSIS.md  ANALYSIS_FINAL_DETAILED.md  ANALYSIS_INDEX.md  CMakeLists.txt  CODEBASE_ANALYSIS_DETAILED.md  FINAL_ANALYSIS_SUMMARY.md  FINDINGS_DETAILED.txt  FINDINGS_SUMMARY.txt  FIXES_APPLIED.txt  LOG_ANALYSIS_DETAILED.md  QUICK_FINDINGS.txt  QUICK_REFERENCE.txt  QUICK_REFERENCE_ISSUES.txt  README_ANALYSIS.md  README_REAL_WIRE.md  REPORT.md  main.cpp  main2.cpp  test_commands.txt
reference/OLD_SHELLMAP/headers/: CommandHandler.hpp  CryptoCore.hpp  FileManager.hpp  NetworkEngine.hpp  NodeInitializer.hpp  Protocol.hpp  ProtocolManager.hpp  RelayManager.hpp  RoutingTable.hpp  SecurityUtils.hpp  SessionManager.hpp  TerminalInput.hpp  UPnPHelper.hpp  VerificationManager.hpp  Web3Manager.hpp
reference/OLD_SHELLMAP/shellmap/shared/: welcome.txt
reference/OLD_SHELLMAP/shellmap/system/: config.json  falcon_priv.key  falcon_pub.key  kyber_priv.key  kyber_pub.key
reference/OLD_SHELLMAP/src/: CommandHandler.cpp  ProtocolManager.cpp  ProtocolManager.cpp.bak  RelayManager.cpp  SessionManager.cpp  SessionManager.cpp.bak  VerificationManager.cpp  Web3Manager.cpp
runtime/: CMakeLists.txt  README.md  runtime.cpp  runtime.h  runtime.hpp
runtime/executor/: CMakeLists.txt  executor.cpp  executor.hpp
runtime/fsm/: fsm.h
runtime/sandbox/: CMakeLists.txt  sandbox.cpp  sandbox.hpp
runtime/workerpool/: CMakeLists.txt  workerpool.cpp  workerpool.hpp
tests/: CMakeLists.txt
tests/integration/: smoke_test.sh
tests/unit/: compiler_test.cpp  core_test.cpp  protocol_test.cpp
tests/unit/core/certificate/: test_certificate.cpp
tests/unit/core/contract/: test_contract.cpp
tests/unit/core/discovery/: test_discovery.cpp
tests/unit/core/governance/: test_governance.cpp
tests/unit/core/identity/: test_identity.cpp
tests/unit/protocol/: test_pct.cpp
transport/: CMakeLists.txt  README.md  transport.h
transport/framing/: framing.h
transport/serialization/: serialization.h
transport/tcp/: CMakeLists.txt  tcp_transport.cpp  tcp_transport.h
trust/: CMakeLists.txt  README.md  trust.h
(+61 files in other folders)
